--- a/contact/templates/contact.html
+++ b/contact/templates/contact.html
@@ -1,4 +1,4 @@
-{% block title %}Contact - {{ block.super }}{% endblock %}
+{% block title %}Contact - {% endblock %}
 
 {% block content %}
 <h1>Contact</h1>
